# QualityControlToMajorIssue

./: .gitignore  Cargo.toml  mpvqc.pest
src/: config.rs  editor.rs  main.rs  qc_issue.rs  subs.rs
