[package]
name = "QualityControlToMajorIssue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
edit = "0.1.5"
hhmmss = "0.1.0"
pest = "2.7.11"
pest_derive = "2.7.11"
termimad = "0.29.4"
